@@ -22,3 +22,16 @@ HousekeepingFrequency=1
 # 3 - for debugging (produces lots of information)
 
 DebugLevel=2
+
+# Database name
+
+DBName=zabbix
+
+# Database user
+
+DBUser=zabbix
+
+# Database password
+# Comment this line if no password used
+
+#DBPassword=<password>
